# politeness-macro

./: Cargo.toml  README.md
politeness-macro/: Cargo.toml
politeness-macro-impl/: Cargo.toml
politeness-macro-impl/src/: lib.rs
politeness-macro/src/: lib.rs
really-bad-idea/: Cargo.toml
really-bad-idea/src/: main.rs
